<resources>
    <string name="app_name">Appunti</string>
    <string name="app_name_complete">{ Appunti }</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="category_default">Uncategorized</string>

    <!-- debug -->
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
        id fringilla augue,
        nec convallis
        mi. Pellentesque auctor iaculis ex nec dignissim. Proin elit magna, mattis at vulputate nec, laoreet ut neque.
        Morbi
        venenatis est a elit bibendum accumsan. Etiam condimentum scelerisque dapibus. Praesent ex nibh, mollis ac
        faucibus ac,
        congue sit amet ex. Vestibulum facilisis efficitur ante at convallis. Proin condimentum erat lacus, nec gravida
        dolor
        rhoncus sit amet. Nunc lobortis, odio id volutpat luctus, ipsum velit mattis tortor, sit amet euismod nisl nisi
        non lorem.
        Donec fermentum enim et eleifend maximus. Curabitur dictum molestie hendrerit. Orci varius natoque penatibus et
        magnis dis
        parturient montes, nascetur ridiculus mus. Aenean sit amet tellus quis nibh congue consequat. Cras convallis est
        id ligula
        facilisis scelerisque.
    </string>
    <string name="search_title">Search</string>
    <string name="search_view_hint_text">Search in Appunti...</string>
    <string name="categories_all">All</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="sort_by">Sort By...</string>
    <string name="add_new_note">Add New Note</string>

    <string name="title_activity_categories">Edit Categories</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="add_new_category">Add New Category</string>
    <string name="category_title_dialog">Enter Category Name</string>
    <string name="undo_uppercase">UNDO</string>
    <string name="category_deleted_snackbar_title">Category Deleted</string>
    <string name="restart_required">Restart Required</string>
    <string name="restart_required_body">You need to restart the app in order to apply the changes</string>
    <string name="restart">Restart</string>
    <string name="pinned">Pinned</string>
    <string name="others">Others</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="pick_a_color">Pick a Color</string>
    <string name="deleted">Deleted</string>
    <string name="archived">Archived</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="share">Share</string>
    <string name="restore">Restore</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="content_here">Content Here...</string>
    <string name="channel_name">Note</string>
    <string name="channel_description">Alarm from a Note</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="remove_reminder">Remove Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="edit_reminder_dialog_text">This Note has a reminder set to\n%s.\nDo you want to change or remove it?
    </string>
    <string name="reminder_removed">Reminder Removed</string>
    <string name="reminder_set">Reminder Set</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="view">View</string>
    <string name="file_added">File added</string>
    <string name="image_added">Image added</string>
    <string name="display_as_grid">Display as Grid</string>
    <string name="today_at">Today at %s</string>
    <string name="yesterday_at">Yesterday at %s</string>
    <string name="tomorrow_at">Tomorrow at %s</string>
    <string name="last_modified">Modified %s</string>
    <string name="created_at">Created %s</string>
    <string name="new_entry_item">New Entry Item</string>
    <string name="entries_restored">Entries Restored</string>
    <string name="demo_category_personal">Personal</string>
    <string name="demo_category_work">Work</string>
    <string name="demo_category_other">Other</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="adding_file">Adding file...</string>
    <string name="style">Style</string>
    <string name="bugs_questions_suggestions">Bugs, Questions, Suggestions?</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_from_app_subject">Feedback from {Appunti}</string>
    <string name="unable_to_find_app_to_handle_request">Unable to find an application to handle this request</string>
    <string name="misc">Misc</string>
    <string name="version">Version</string>
    <string name="date">Date</string>
    <string name="open_link">Open Link</string>
    <string name="keep_editing">Continue Editing</string>
    <string name="always_ask">Always Ask</string>
    <string name="new_text_note">New Text Note</string>
    <string name="new_list_note">New List Note</string>

    <plurals name="entries_archived_title">
        <item quantity="one">Entry Archived</item>
        <item quantity="other">%d Entries Archived</item>
    </plurals>

    <plurals name="entries_unarchived_title">
        <item quantity="one">Entry Unarchived</item>
        <item quantity="other">%d Entries Unarchived</item>
    </plurals>

    <plurals name="entries_delete_action_question">
        <item quantity="one">Are you sure you want to delete this Entry? This action cannot be undone</item>
        <item quantity="other">Are you sure you want to delete these %d Entries? This action cannot be undone</item>
    </plurals>

    <plurals name="entries_deleted_title">
        <item quantity="one">Entry Deleted</item>
        <item quantity="other">%d Entries Deleted</item>
    </plurals>

    <plurals name="entries_restored_title">
        <item quantity="one">Entry Restored</item>
        <item quantity="other">%d Entries Restored</item>
    </plurals>

    <plurals name="entries_pinned_title">
        <item quantity="one">Entry Pinned</item>
        <item quantity="other">%d Entries Pinned</item>
    </plurals>

    <plurals name="entries_unpinned_title">
        <item quantity="one">Entry Unpinned</item>
        <item quantity="other">%d Entries Unpinned</item>
    </plurals>

    <plurals name="entries_selected_count">
        <item quantity="zero">None Selected</item>
        <item quantity="one">%d Selected</item>
        <item quantity="other">%d Selected</item>
    </plurals>

    <plurals name="remote_url_others_count">
        <item quantity="one">+ one more</item>
        <item quantity="other">+ %d more</item>
    </plurals>

    <plurals name="attachments_others_count">
        <item quantity="one">+ one more</item>
        <item quantity="other">+ %d more</item>
    </plurals>

    <string name="remote_url_others_less">- less</string>
    <string name="activity_not_found">I can\'t find any installed application to view this file</string>
    <string name="title_activity_attribution">Credits</string>
    <string name="yes">Yes</string>
    <string name="confirm">Confirm</string>

    <string name="attribution_html" translatable="false"><![CDATA[
<h3>File Icons:</h3>
<br />
<ul>
    &#09;<li>&nbsp;<a href="https://www.flaticon.com/authors/smashicons">Smashicons</a></li>
    &#09;<li>&nbsp;<a href="https://www.flaticon.com/authors/pixel-buddha">Pixel Buddha</a></li>
    &#09;<li>&nbsp;<a href="https://www.flaticon.com/authors/freepik">Freepik</a></li>
</ul>
<br />
<p>from <a href="https://www.flaticon.com">www.flaticon.com</a></p>
<br /><br />

<h3>Application Icons:</h3>
<br />
    &#09;<li>&nbsp;<a href="https://material.io/tools/icons/">Material Icons</a>
<br /><br />

<h3>Third Party Libraries:</h3>
<br />
<ul>
    &#09;<li>&nbsp;<a href="https://github.com/sephiroth74/AndroidUIGestureRecognizer">AndroidUIGestureRecognizer</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/saket/Better-Link-Movement-Method">Better-Link-Movement-Method</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/leinardi/FloatingActionButtonSpeedDial">FloatingActionButtonSpeedDial</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/tbruyelle/RxPermissions">RxPermissions</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/barteksc/PdfiumAndroid">PdfiumAndroid</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/square/picasso">picasso</a></li>
    &#09;<li>&nbsp;<a href="https://commons.apache.org/proper/commons-io">commons-io</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/JakeWharton/ThreeTenABP">ThreeTenABP</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/wdullaer/MaterialDateTimePicker">MaterialDateTimePicker</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/google/flexbox-layout">flexbox-layout</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/agrosner/DBFlow">DBFlow</a></li>
    &#09;<li>&nbsp;<a href="https://github.com/lapism/MaterialSearchView">MaterialSearchView</a></li>
    &#09;<li>&nbsp;<a href="https://jsoup.org">jsoup</a></li>
</ul>
    ]]></string>
    <string name="take_picture">Take Picture</string>
    <string name="attach_image">Attach Image</string>
    <string name="attach_file">Attach File</string>
    <string name="attach_voice">Attach Audio</string>
    <string name="oh_snap">Oh Snap! An error occurred!</string>
    <string name="convert_to_text">Convert to Text</string>
    <string name="convert_to_list">Convert to List</string>
    <string name="current_location">Current Location</string>
    <string name="retrieving_current_location">Retrieving current location....</string>
    <string name="permissions_required">Permissions required</string>
    <string name="permissions_required_dialog_body">You need to grant location permissions in order to do this. Press Ok to open System Settings and change the App Permissions</string>
    <string name="permissions_audio_required_dialog_body">You need to grant audio recording permissions in order to do this. Press Ok to open System Settings and change the App Permissions</string>
    <string name="category_reminder">With Reminder</string>
    <string name="snooze">Close</string>
    <string name="postpone">Snooze</string>
    <string name="alarm_postponed">Reminder postponed by %d minutes</string>
    <string name="delete_all_done">Remove Entries marked as done</string>

    <string name="appunti_settings_theme_behavior_automatic">Automatic</string>
    <string name="appunti_settings_theme_behavior_Dark">Dark</string>
    <string name="appunti_settings_theme_behavior_Light">Light</string>
    <string name="theme">Theme</string>
    <string name="nothing_here">Nothing here...</string>
    <string name="ops_it_seems_like_you_don_t_have_any_note_in_this_category">Ops. It seems like you don\'t have any note in this category</string>
    <string name="create_new">Create New</string>
    <string name="attribution">Attribution</string>
    <string name="click_on_links">Click on Links</string>
    <string name="no_transcription_found">Sorry, no transcription found</string>
    <string name="confirm_attachment_delete_body">Are you sure you want to remove this attachment? You cannot undo.</string>
    <integer name="appunti_settings_theme_behavior_automatic">0</integer>
    <integer name="appunti_settings_theme_behavior_Dark">1</integer>
    <integer name="appunti_settings_theme_behavior_Light">2</integer>


</resources>
