<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_action_share"
            android:checkable="false"
            android:icon="@drawable/sharp_share_24"
            android:title="@string/share"
            app:showAsAction="always" />

    <item
            android:id="@+id/menu_action_pin"
            android:checkable="false"
            android:icon="@drawable/appunti_sharp_favourite_24_unchecked_selector"
            android:title="@string/pin"
            app:showAsAction="always" />

    <item
            android:id="@+id/menu_action_archive"
            android:checkable="false"
            android:icon="@drawable/appunti_outline_archive_24_unchecked_selector"
            android:title="@string/archive"
            app:showAsAction="ifRoom|withText" />
    <item
            android:id="@+id/menu_action_delete"
            android:checkable="false"
            android:icon="@drawable/appunti_sharp_delete_24_outline_selector"
            android:title="@string/delete"
            app:showAsAction="ifRoom|withText" />

    <item
            android:id="@+id/menu_action_alarm"
            android:checkable="false"
            android:icon="@drawable/sharp_alarm_add_24"
            android:title="@string/add_reminder"
            app:showAsAction="ifRoom|withText" />


</menu>
