<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_delete"
        android:checkable="false"
        android:icon="@drawable/appunti_sharp_delete_24_outline_selector"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_share"
        android:checkable="false"
        android:icon="@drawable/appunti_sharp_share_24_selector"
        android:title="@string/share"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_action_category"
        android:checkable="false"
        android:icon="@drawable/outline_label_24"
        android:title="@string/category"
        app:showAsAction="always" />

</menu>