<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:lines="1"
        android:text="@string/app_name_complete"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/colorPrimaryDark" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/categories"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorControlNormal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/navigationRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

    </androidx.recyclerview.widget.RecyclerView>

    <include layout="@layout/design_navigation_item_separator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/newLabel"
        style="@style/Theme.Appunti.NavigationItem"
        android:drawableStart="@drawable/sharp_playlist_add_24"
        android:text="@string/add_new_category"
        app:paddingStart="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editLabels"
        style="@style/Theme.Appunti.NavigationItem"
        android:drawableStart="@drawable/sharp_edit_24"
        android:text="@string/edit_categories" />

    <include layout="@layout/design_navigation_item_separator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/settings"
        style="@style/Theme.Appunti.NavigationItem"
        android:drawableStart="@drawable/sharp_settings_24"
        android:text="@string/settings" />


</LinearLayout>